# criteo-mcp-server

./: .gitignore  README.md  generate-client.sh  pyproject.toml  server.py
criteo_mcp_server/: __main__.py  server.py
